--- a/package.json
+++ b/package.json
@@ -33,9 +33,12 @@
     "buttercms": "^1.2.7",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "file-exists": "^5.0.1",
+    "file-system": "^2.2.2",
     "hammerjs": "^2.0.8",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
+    "ng-image-slider": "^2.8.0",
     "ng2-pdf-viewer": "^7.0.1",
     "ngx-bootstrap": "^6.2.0",
     "ngx-cookie": "^5.0.2",
@@ -46,13 +49,18 @@
     "videogular2": "^7.0.2",
     "zone.js": "~0.11.3"
   },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
+  },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1102.10",
     "@angular/cli": "^11.2.10",
     "@angular/compiler-cli": "~11.2.11",
     "@types/core-js": "^2.5.5",
     "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.36",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
